# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mypackage*"]
exclude = ["images*"]
namespaces = false

[project]
name = "strimlitbook"
version = "0.1.0"
description = "Convert Jupyter Notebooks to identical Streamlit web apps."
readme = "README.md"
authors = [{ name = "Bekhruz (Bex) Tuychiev", email = "bex@ibexprogramming.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["streamlit", "strimlitbook", "jupyter",
    "jupyter notebook", "notebook", "web app"]
dependencies = [
    'streamlit', 'numpy', 'pandas', 'plotly', 'Pillow'
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/BexTuychiev/strimlitbook"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"./strimlitbook/__init__.py" = ["{version}"]

"setup.py" = [
    "{version}",
    "{pep440_version}",
]

"README.md" = [
    "{version}",
    "{pep440_version}",
]

